# dyingsunseteditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dyingsunseteditorConfig.h.in
scripts/: build.sh
src/: main.cpp
